@@ -65,11 +65,6 @@ typedef gboolean (*VipsOperationBuildFn)( VipsObject * );
 typedef struct _VipsOperation {
 	VipsObject parent_instance;
 
-	/* When we added this operation to cache .. used to find LRU for
-	 * flush.
-	 */
-	int time;
-
 	/* Keep the hash here.
 	 */
 	guint hash;
