@@ -439,8 +439,10 @@ vips_operation_class_print_usage( VipsOperationClass *operation_class )
 void
 vips_operation_invalidate( VipsOperation *operation )
 {
+	/*
 	printf( "vips_operation_invalidate: %p\n", operation ); 
 	vips_object_print_summary( VIPS_OBJECT( operation ) ); 
+	 */
 
 	g_signal_emit( operation, vips_operation_signals[SIG_INVALIDATE], 0 );
 }
