@@ -38,6 +38,7 @@
 - better filename tracking for globalbalance
 - revised vips8 image load/save API, now simpler and more logical
 - operations emit "invalidate" if any of their input images invalidate
+- operation cache drops ops on invalidate
 
 6/3/14 started 7.38.6
 - grey ramp minimum was wrong
